Página picos pronta

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         </header>
         <nav class="menu-lateral">
             <img src="assets/img/logo.svg" alt="Logo HZC" class="menu-lateral-logo" />
-            <a href="#" class="menu-lateral-link menu-lateral-link--inicio">Início</a>
+            <a href="index.html" class="menu-lateral-link menu-lateral-link--inicio">Início</a>
             <a href="#" class="menu-lateral-link menu-lateral-link--video">Vídeo</a>
-            <a href="#" class="menu-lateral-link menu-lateral-link--picos">Picos</a>
+            <a href="picos.html" class="menu-lateral-link menu-lateral-link--picos">Picos</a>
             <a href="#" class="menu-lateral-link menu-lateral-link--integrantes">Integrantes</a>
             <a href="#" class="menu-lateral-link menu-lateral-link--camisas">Camisas</a>
             <a href="#" class="menu-lateral-link menu-lateral-link--pinturas">Pinturas</a>
@@ -35,7 +35,7 @@
                 <img src="assets/img/banner_1.png" alt="Banner do cartão" class="cartao-imagem cartao-imagem-desktop" />
                 <div class="cartao-conteudo">
                     <p class="cartao-destaque">Vídeo em Destaque</p>
-                    <h3 class="cartao-titulo">HZC - Título</h3>
+                    <h3 class="cartao-titulo">HZC - Life is.../ 2021</h3>
                     <p class="cartao-perfil">Bruno Lopez</p>
                     <p class="cartao-info cartao-info--tempo">33 minutos</p>
                     <p class="cartao-info cartao-info--visualizacao">53 visualizações</p>
@@ -141,49 +141,49 @@
                 <a href="#" class="cartao-recentes-link">Ver todas</a>
                 <ul class="cartao-recentes-lista">
                     <li class="cartao-recentes-item">
-                        <img src="assets/img/miniatura_1.png" alt="Miniatura da arte" class="cartao-recentes-item-thumbnail" />
+                        <img src="assets/img/miniatura_9.png" alt="Miniatura da arte" class="cartao-recentes-item-thumbnail" />
                         <h4 class="cartao-recentes-item-titulo">Sem título 01</h4>
                         <p class="cartao-recentes-item-perfil">Antonio Tebyriçá</p>
                     </li>
                 </ul>
                 <ul class="cartao-recentes-lista">
                     <li class="cartao-recentes-item">
-                        <img src="assets/img/Rectangle 97.png" alt="Miniatura da arte" class="cartao-recentes-item-thumbnail" />
+                        <img src="assets/img/miniatura_11.png" alt="Miniatura da arte" class="cartao-recentes-item-thumbnail" />
                         <h4 class="cartao-recentes-item-titulo">Sem título 02</h4>
                         <p class="cartao-recentes-item-perfil">Antonio Tebyriçá</p>
                     </li>
                 </ul>
                 <ul class="cartao-recentes-lista">
                     <li class="cartao-recentes-item">
-                        <img src="assets/img/Rectangle 97-1.png" alt="Miniatura da arte" class="cartao-recentes-item-thumbnail" />
+                        <img src="assets/img/miniatura_12.png" alt="Miniatura da arte" class="cartao-recentes-item-thumbnail" />
                         <h4 class="cartao-recentes-item-titulo">Segurança</h4>
                         <p class="cartao-recentes-item-perfil">Raphael Gibson</p>
                     </li>
                 </ul>
                 <ul class="cartao-recentes-lista">
                     <li class="cartao-recentes-item">
-                        <img src="assets/img/Rectangle 97-2.png" alt="Miniatura da arte" class="cartao-recentes-item-thumbnail" />
+                        <img src="assets/img/miniatura_13.png" alt="Miniatura da arte" class="cartao-recentes-item-thumbnail" />
                         <h4 class="cartao-recentes-item-titulo">Malunguisse</h4>
                         <p class="cartao-recentes-item-perfil">Carolina Canavarro</p>
                     </li>
                 </ul>
                 <ul class="cartao-recentes-lista">
                     <li class="cartao-recentes-item">
-                        <img src="assets/img/Rectangle 97-3.png" alt="Miniatura da arte" class="cartao-recentes-item-thumbnail" />
+                        <img src="assets/img/miniatura_9.png" alt="Miniatura da arte" class="cartao-recentes-item-thumbnail" />
                         <h4 class="cartao-recentes-item-titulo">Coroa da converse</h4>
                         <p class="cartao-recentes-item-perfil">Nikolas de Murtas</p>
                     </li>
                 </ul>
                 <ul class="cartao-recentes-lista">
                     <li class="cartao-recentes-item">
-                        <img src="assets/img/Rectangle 97-4.png" alt="Miniatura da arte" class="cartao-recentes-item-thumbnail" />
+                        <img src="assets/img/miniatura_8.png" alt="Miniatura da arte" class="cartao-recentes-item-thumbnail" />
                         <h4 class="cartao-recentes-item-titulo">Segurança</h4>
                         <p class="cartao-recentes-item-perfil">Raphael Gibson</p>
                     </li>
                 </ul>
                 <ul class="cartao-recentes-lista">
                     <li class="cartao-recentes-item">
-                        <img src="assets/img/Rectangle 97.png" alt="Miniatura da arte" class="cartao-recentes-item-thumbnail" />
+                        <img src="assets/img/miniatura_10.png" alt="Miniatura da arte" class="cartao-recentes-item-thumbnail" />
                         <h4 class="cartao-recentes-item-titulo">Sem título 03</h4>
                         <p class="cartao-recentes-item-perfil">Antonio Tebyriçá</p>
                     </li>
